# satpy-composites-plugin-example

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
satpy_cpe/: __init__.py  custom_ndvi.py
satpy_cpe/etc/composites/: viirs.yaml
